Customized some buttons.

--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -9,14 +9,14 @@
 <h2>Students</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <input type="button" class="btn btn-xs btn-info" value="Create New" onclick="location.href='@Url.Action("Create", "Student")'" />
 </p>
 
 @using (Html.BeginForm("Index", "Student", FormMethod.Get))
 {
     <p>
         Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
-        <input type="submit" value="Search" />
+        <input class="btn btn-sm btn-info" type="submit" value="Search" />
     </p>
 }
 <table class="table">
@@ -58,4 +58,5 @@
 <br />
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
-@Html.PagedListPager(Model, page => Url.Action("Index", new {  page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new {  page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilterm }))
