--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,11 +17,11 @@
     <div class="col-md-4">
         <h2>You can make one too!</h2>
         <p>You can build the application by following the steps in the tutorial series on the ASP.NET site.</p>
-        <p><a class="btn btn-default btn-dark" href="http://www.asp.net/mvc/tutorials/getting-started-with-ef-using-mvc/">See the tutorial &raquo;</a></p>
+        <p><a class="btn btn-info" href="http://www.asp.net/mvc/tutorials/getting-started-with-ef-using-mvc/">See the tutorial &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Finished Version of the Original.</h2>
         <p>If you want to see what the original Contoso University site is supposed to look like, look here!.</p>
-        <p><a class="btn btn-default" href="https://webpifeed.blob.core.windows.net/webpifeed/Partners/ASP.NET%20MVC%20Application%20Using%20Entity%20Framework%20Code%20First.zip">Download &raquo;</a></p>
+        <p><a class="btn btn-info" href="https://webpifeed.blob.core.windows.net/webpifeed/Partners/ASP.NET%20MVC%20Application%20Using%20Entity%20Framework%20Code%20First.zip">Download &raquo;</a></p>
     </div>
 </div>
