--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,11 +3,12 @@
 }
 
 <div class="jumbotron">
-    <h1>Welcome!<br />To Alex Abushady's<br />Version of Contoso University!</h1>
+    <h2>Welcome to Alex Abushady's Contoso University!</h2>
+    <p class="text-center">This is a customized version of the Contoso University tutorial from Microsoft.</p>
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2>What is Contoso University?</h2>
+        <h3><small>What is Contoso University?</small></h3>
         <p>
             Contoso University is a sample application that
             demonstrates how to use Entity Framework 6 in an
@@ -15,13 +16,13 @@
         </p>
     </div>
     <div class="col-md-4">
-        <h2>You can make one too!</h2>
+        <h3><small>You can make one too!</small></h3>
         <p>You can build the application by following the steps in the tutorial series on the ASP.NET site.</p>
-        <p><a class="btn btn-info" href="http://www.asp.net/mvc/tutorials/getting-started-with-ef-using-mvc/">See the tutorial &raquo;</a></p>
+        <p><a class="btn btn-sm btn-info" href="http://www.asp.net/mvc/tutorials/getting-started-with-ef-using-mvc/">See the tutorial &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Finished Version of the Original.</h2>
+        <h3><small>Download the Original.</small></h3>
         <p>If you want to see what the original Contoso University site is supposed to look like, look here!.</p>
-        <p><a class="btn btn-info" href="https://webpifeed.blob.core.windows.net/webpifeed/Partners/ASP.NET%20MVC%20Application%20Using%20Entity%20Framework%20Code%20First.zip">Download &raquo;</a></p>
+        <p><a class="btn btn-sm btn-info" href="https://webpifeed.blob.core.windows.net/webpifeed/Partners/ASP.NET%20MVC%20Application%20Using%20Entity%20Framework%20Code%20First.zip">Download &raquo;</a></p>
     </div>
 </div>
