--- a/Views/Instructor/Index.cshtml
+++ b/Views/Instructor/Index.cshtml
@@ -15,6 +15,7 @@
         <th>First Name</th>
         <th>Hire Date</th>
         <th>Office</th>
+        <th>Courses</th>
         <th></th>
     </tr>
 
@@ -25,29 +26,39 @@
         {
             selectedRow = "success";
         }
-        <tr class="@selectedRow">
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstMidName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HireDate)
-            </td>
-            <td>
-                @if (item.OfficeAssignment != null)
-                {
-                    @item.OfficeAssignment.Location
-                }
-            </td>
-            <td>
-                <input type="button" class="btn btn-xs btn-info" value="Select" onclick="location.href='@Url.Action("Index","Instructor", new { id = item.ID })'" /> |
-                <input type="button" class="btn btn-xs btn-info" value="Edit" onclick="location.href='@Url.Action("Edit", "Instructor", new { id = item.ID })'" /> |
-                <input type="button" class="btn btn-xs btn-info" value="Details" onclick="location.href='@Url.Action("Details", "Instructor", new { id = item.ID })'" /> |
-                <input type="button" class="btn btn-xs btn-info" value="Delete" onclick="location.href='@Url.Action("Delete", "Instructor", new { id = item.ID })'" />
-            </td>
-        </tr>
+<tr class="@selectedRow">
+    <td>
+        @Html.DisplayFor(modelItem => item.LastName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FirstMidName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.HireDate)
+    </td>
+    <td>
+        @if (item.OfficeAssignment != null)
+        {
+            @item.OfficeAssignment.Location
+        }
+    </td>
+
+    <td>
+        @{
+            foreach (var course in item.Courses)
+            {
+                @course.CourseID @:  @course.Title <br />
+            }
+        }
+    </td>
+
+    <td>
+        <input type="button" class="btn btn-xs btn-info" value="Select" onclick="location.href='@Url.Action("Index","Instructor", new { id = item.ID })'" /> |
+        <input type="button" class="btn btn-xs btn-info" value="Edit" onclick="location.href='@Url.Action("Edit", "Instructor", new { id = item.ID })'" /> |
+        <input type="button" class="btn btn-xs btn-info" value="Details" onclick="location.href='@Url.Action("Details", "Instructor", new { id = item.ID })'" /> |
+        <input type="button" class="btn btn-xs btn-info" value="Delete" onclick="location.href='@Url.Action("Delete", "Instructor", new { id = item.ID })'" />
+    </td>
+</tr>
     }
 
 </table>
