--- a/Views/Instructor/Index.cshtml
+++ b/Views/Instructor/Index.cshtml
@@ -83,7 +83,8 @@
             }
             <tr class="@selectedRow">
                 <td>
-                    @Html.ActionLink("Select", "Index", new { courseID = item.CourseID })
+                    @Html.ActionLink("Select", "Index", new { courseID = item.CourseID }, new { @class = "btn btn-xs btn-info" })
+
                 </td>
                 <td>
                     @item.CourseID
